Added Card Delete Button; Created ItemOverview
